<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/search_condition_year"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtYearDlg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:ems="4"
        android:hint="@string/enterYear"
        android:inputType="number"
        android:maxEms="4"
        android:maxLength="4"
        android:textSize="18sp"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/search_condition_month"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtMonthDlg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:ems="2"
        android:hint="@string/enterMonth"
        android:inputType="number"
        android:maxEms="2"
        android:maxLength="2"
        android:textSize="18sp"
        tools:ignore="LabelFor" />

</LinearLayout>