<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimage8"
    tools:context="com.example.lcc.acountingbooks.account_setting">

    <Button
        android:id="@+id/btnIndexView"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/buttonshape"
        android:onClick="IndexView"
        android:text="@string/IndexViewSetting"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnIncomePayItem"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/buttonshape"
        android:onClick="IncomePayItemSetting"
        android:text="@string/IncomePayItemSetting"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnIndexView" />

    <Button
        android:id="@+id/btnCreditCard"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttonshape"
        android:onClick="CreditCardSetting"
        android:text="@string/CreditCardSetting"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIncomePayItem" />

    <Button
        android:id="@+id/btnExpenseQuota"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttonshape"
        android:onClick="ExpenseQuota"
        android:text="@string/ExpenseQuotaSetting"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCreditCard" />

    <Button
        android:id="@+id/btnPaymentDay"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttonshape"
        android:onClick="PaymentDay"
        android:text="@string/PaymentDaySetting"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnExpenseQuota" />
</android.support.constraint.ConstraintLayout>
