<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lcc.acountingbooks.account_setting_paymentday">

    <Button
        android:id="@+id/btnDeletePD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:onClick="delete"
        android:text="@string/delete"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnUpdatePD" />

    <Button
        android:id="@+id/btnUpdatePD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:onClick="update"
        android:text="@string/update"
        app:layout_constraintLeft_toRightOf="@+id/btnDeletePD"
        app:layout_constraintRight_toLeftOf="@+id/btnAddPD"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtPaymentDay" />

    <Button
        android:id="@+id/btnAddPD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="add"
        android:text="@string/add"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnUpdatePD" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdatePD">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="93dp">

            <ListView
                android:id="@+id/lvPD"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="45dp"
        android:gravity="center"
        android:text="@string/BillingName"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/edtBillName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edtBillName"
        android:layout_marginStart="45dp" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="最後繳款日："
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/edtPaymentDay"
        app:layout_constraintTop_toTopOf="@+id/edtPaymentDay"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintRight_toLeftOf="@+id/edtPaymentDay"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/edtBillName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/billingName"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@+id/textView33"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/edtPaymentDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/monthOfDay"
        android:inputType="number"
        android:maxLength="2"
        android:textSize="16sp"
        app:layout_constraintRight_toRightOf="@+id/edtBillName"
        app:layout_constraintTop_toBottomOf="@+id/edtBillName" />

    <Button
        android:id="@+id/button9"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/background1"
        android:onClick="save"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
